Add History Page & componentize DropdownMenu, Modal, Lesson

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Pressable"
     ],
     "editor.formatOnSave": true,
+    "editor.hover.enabled": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "[typescriptreact]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
