--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.6"
+    "react-native": "0.72.6",
+    "react-native-outside-press": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
