Add course topic page & componentize Topic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
         "Pressable"
     ],
     "editor.formatOnSave": true,
-    "editor.hover.enabled": true,
+    "editor.hover.enabled": false,
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "[typescriptreact]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
