--- a/package.json
+++ b/package.json
@@ -9,25 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-blob-util": "^6.0.0",
+    "@config-plugins/react-native-pdf": "^6.0.0",
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "expo": "~49.0.13",
+    "expo-dev-client": "^2.4.11",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-blob-util": "^0.19.2",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-outside-press": "^1.2.1",
+    "react-native-pdf": "^6.7.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0"
+    "react-native-svg": "13.9.0",
+    "react-native-table-component": "^1.2.2",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.5",
+    "@types/react-native-table-component": "^1.2.6",
     "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^5.1.3"
   },
