--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "expo": "~49.0.13",
+    "expo-av": "~13.4.1",
     "expo-dev-client": "^2.4.11",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
@@ -30,15 +31,14 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "react-native-table-component": "^1.2.2",
-    "react-native-web": "~0.19.6",
-    "expo-av": "~13.4.1"
+    "react-native-table-component": "^1.2.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@types/react-native": "^0.72.5",
-    "@types/react-native-table-component": "^1.2.6",
+    "@types/react-native-table-component": "^1.2.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^5.1.3"
   },
