--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,7 +108,9 @@ dependencies {
     implementation("com.facebook.react:react-android")
     implementation project(':react-native-vector-icons')
     implementation project(':react-native-linear-gradient')
-    
+    implementation project(':react-native-video')
+    implementation "androidx.appcompat:appcompat:1.0.0"
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
