--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -6,5 +6,8 @@ includeBuild('../node_modules/@react-native/gradle-plugin')
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
 
-include ':react-native-linear-gradient' 
-project(':react-native-linear-gradient').projectdir = new file(rootproject.projectdir, '../node_modules/react-native-linear-gradient/android')
+// include ':react-native-linear-gradient' 
+// project(':react-native-linear-gradient').projectdir = new file(rootproject.projectdir, '../node_modules/react-native-linear-gradient/android')
+
+include ':react-native-video'
+project(':react-native-video').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-video/android')
