Create global state & mock data & logic for signup, signin, forgot password

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
   "editor.hover.enabled": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "prettier.endOfLine": "lf",
-  "[typescriptreact]": {
+  "[typescriptreact,typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
