--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@react-native-community/datetimepicker": "^7.6.1",
     "@react-native-community/slider": "^4.4.3",
     "@react-navigation/drawer": "^6.6.6",
