--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-blob-util": "^0.19.2",
+    "react-native-document-picker": "^9.0.1",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-outside-press": "^1.2.1",
     "react-native-pdf": "^6.7.1",
+    "react-native-radio-buttons-group": "^3.0.5",
     "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
