--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "babel-plugin-module-resolver": "^5.0.0",
+    "i18next": "^23.7.7",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
+    "react-i18next": "^13.5.0",
     "react-native": "0.72.6",
     "react-native-blob-util": "^0.19.2",
     "react-native-document-picker": "^9.0.1",
