--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
+    "axios": "^1.6.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "i18next": "^23.7.7",
     "nativewind": "^2.0.11",
@@ -25,6 +26,7 @@
     "react-native": "0.72.6",
     "react-native-blob-util": "^0.19.2",
     "react-native-document-picker": "^9.0.1",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-orientation-locker": "^1.5.0",
