--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.72.6",
     "react-native-blob-util": "^0.19.2",
     "react-native-document-picker": "^9.0.1",
+    "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.12.1",
