--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_DEV_API_URL=https://sandbox.api.lettutor.com
 REACT_APP_PROD_API_URL=https://api.app.lettutor.com
+REACT_APP_WEB_CLIENT_ID=455171651134-976cpo7cqfvst4nt9gn5sq6kopi6dglg.apps.googleusercontent.com
