--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@react-native-community/checkbox": "^0.5.16",
     "@react-native-community/datetimepicker": "^7.6.1",
     "@react-native-community/slider": "^4.4.3",
+    "@react-native-firebase/app": "^18.7.3",
+    "@react-native-firebase/auth": "^18.7.3",
+    "@react-native-google-signin/google-signin": "^11.0.0",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "i18next": "^23.7.7",
@@ -28,8 +33,10 @@
     "react-native-document-picker": "^9.0.1",
     "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-elements": "^3.4.3",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-outside-press": "^1.2.1",
