--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
+    "start:reset": "react-native start --reset-cache",
     "test": "jest"
   },
   "dependencies": {
@@ -35,6 +36,7 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-elements": "^3.4.3",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-fbsdk-next": "^12.1.2",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-linear-gradient": "^2.8.3",
@@ -58,6 +60,7 @@
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-dotenv": "^0.2.2",
     "@types/react-native-vector-icons": "^6.4.16",
     "@types/react-native-video": "^5.0.17",
     "@types/react-test-renderer": "^18.0.0",
