--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.1",
     "react-native-video": "^5.0.2",
+    "socket.io-client": "^4.7.2",
     "toastify-react-native": "^4.0.0"
   },
   "devDependencies": {
