--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@amplitude/react-native": "2.7.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@giphy/react-native-sdk": "2.3.0",
+    "@jitsi/react-native-sdk": "^1.0.3",
+    "@react-native-async-storage/async-storage": "1.19.3",
     "@react-native-community/checkbox": "^0.5.16",
+    "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/datetimepicker": "^7.6.1",
-    "@react-native-community/slider": "^4.4.3",
+    "@react-native-community/netinfo": "9.4.1",
+    "@react-native-community/slider": "4.4.3",
     "@react-native-firebase/app": "^18.7.3",
     "@react-native-firebase/auth": "^18.7.3",
-    "@react-native-google-signin/google-signin": "^11.0.0",
+    "@react-native-google-signin/google-signin": "10.0.1",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
@@ -30,26 +36,41 @@
     "react": "18.2.0",
     "react-i18next": "^13.5.0",
     "react-native": "0.72.6",
+    "react-native-background-timer": "2.4.1",
     "react-native-blob-util": "^0.19.2",
+    "react-native-calendar-events": "2.2.0",
+    "react-native-default-preference": "1.4.4",
+    "react-native-device-info": "10.9.0",
     "react-native-document-picker": "^9.0.1",
     "react-native-dotenv": "^3.4.9",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-elements": "^3.4.3",
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-fbsdk-next": "^12.1.2",
-    "react-native-gesture-handler": "^2.12.1",
+    "react-native-gesture-handler": "2.9.0",
+    "react-native-get-random-values": "1.9.0",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-immersive-mode": "2.0.1",
+    "react-native-keep-awake": "4.0.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-orientation-locker": "^1.5.0",
+    "react-native-orientation-locker": "1.6.0",
     "react-native-outside-press": "^1.2.1",
+    "react-native-pager-view": "6.2.0",
+    "react-native-paper": "5.10.3",
     "react-native-pdf": "^6.7.1",
+    "react-native-performance": "5.0.0",
     "react-native-radio-buttons-group": "^3.0.5",
     "react-native-reanimated": "^3.4.2",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0",
-    "react-native-svg": "^13.14.0",
+    "react-native-safe-area-context": "4.7.1",
+    "react-native-screens": "3.24.0",
+    "react-native-sound": "0.11.2",
+    "react-native-splash-screen": "3.3.0",
+    "react-native-svg": "13.13.0",
     "react-native-vector-icons": "^10.0.1",
-    "react-native-video": "^5.0.2",
+    "react-native-video": "6.0.0-alpha.7",
+    "react-native-watch-connectivity": "1.1.0",
+    "react-native-webrtc": "111.0.6",
+    "react-native-webview": "13.5.1",
     "socket.io-client": "^4.7.2",
     "toastify-react-native": "^4.0.0"
   },
@@ -76,5 +97,8 @@
   },
   "engines": {
     "node": ">=16"
+  },
+  "overrides": {
+    "@xmldom/xmldom": "0.8.7"
   }
 }
