--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-device-info": "10.9.0",
     "react-native-document-picker": "^9.0.1",
     "react-native-dotenv": "^3.4.9",
+    "react-native-draggable": "^3.3.0",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-elements": "^3.4.3",
     "react-native-encrypted-storage": "^4.0.3",
