Add remaining time & teaching time in video call

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "cSpell.words": ["Ionicons", "Pressable"],
+  "cSpell.words": ["Ionicons", "Jitsi", "Pressable"],
   "editor.formatOnSave": true,
   "editor.hover.enabled": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
