Add react native config

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -118,6 +118,8 @@ dependencies {
     implementation project(':react-native-fbsdk-next')
 
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    
+    implementation project(':react-native-config')
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
@@ -137,3 +139,4 @@ dependencies {
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
 apply plugin: 'com.google.gms.google-services'
+apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
