--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-background-timer": "2.4.1",
     "react-native-blob-util": "^0.19.2",
     "react-native-calendar-events": "2.2.0",
+    "react-native-config": "^1.5.1",
     "react-native-default-preference": "1.4.4",
     "react-native-device-info": "10.9.0",
     "react-native-document-picker": "^9.0.1",
